fixed z-index of arrow

--- a/src/components/emojiPicker.scss
+++ b/src/components/emojiPicker.scss
@@ -13,6 +13,7 @@
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
     border-radius: 4px;
     padding: 12px 4px 0 4px;
+    z-index: 2;
 }
 
 .emojiPick-disabled{
@@ -129,7 +130,7 @@
     border-right: 16px solid #EBEEF2;
     border-top: 16px solid #EBEEF2;
     transform: rotate(225deg);
-    z-index: -1;
+    z-index: 1;
     box-shadow: 0px 1px 3px rgb(0 0 0 / 10%);
     outline: #C5D0DB auto 1px;
 }
@@ -140,4 +141,5 @@
     border-right: 16px solid #EBEEF2;
     border-top: 16px solid #EBEEF2;
     transform: rotate(225deg);
+    z-index: 2;
 }
